# gitraffe

./: .eslintrc.cjs  README.md  components.json  package.json  pnpm-lock.yaml  postcss.config.cjs  svelte.config.js  svelte.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src/lib/: branch.ts  feature-flags.ts  persisted.ts  projects.ts  repository.ts  store-updater.ts  types.ts
src/lib/components/: AccountLink.svelte  ActiveBranchStatus.svelte  AheadBehind.svelte  AuthorIcon.svelte  Badge.svelte  BaseBranchCard.svelte  Branch.svelte  BranchContextMenu.svelte  BranchHeader.svelte  BranchIcon.svelte  BranchItem.svelte  BranchLanePopupMenu.svelte  Branches.svelte  BranchesHeader.svelte  Button.svelte  Commands.svelte  CommitCard.svelte  CommitDialog.svelte  Commits.svelte  CredentialCheck.svelte  DeleteBranch.svelte  DomainButton.svelte  DropDownButton.svelte  FileCard.svelte  FileCardHeader.svelte  FileDiff.svelte  FilePreview.svelte  FileStatusTag.svelte  Footer.svelte  FullviewLoading.svelte  HandleBranchName.svelte  HunkLine.svelte  HunkViewer.svelte  Icon.svelte  IconButton.svelte  InfoMessage.svelte  KeysForm.svelte  Link.svelte  (+26 more)
src/routes/: +layout.svelte  +page.svelte
src/styles/: codemirror.postcss  diff-variables.css  diff.postcss  main.css  main.postcss  side-by-side-diff.postcss  syntax.css  text-input.css  text.css  themes.postcss  tokens.css
(+160 files in other folders)
