[package]
name = "gitraffe-app"
version = "0.1.4"
description = "A simple git client"
authors = ["mikael.kristiansson87@gmail.com"]
license = ""
repository = "https://github.com/mikaelkristiansson/gitraffe"
default-run = "gitraffe-app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = [ "updater", "fs-remove-file", "http-request", "shell-open", "fs-exists", "window-start-dragging", "dialog-open", "window-unmaximize", "os-all", "window-maximize", "protocol-asset", "fs-read-file", "path-all", "process-relaunch"] }
chrono = "0.4.23"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
